--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "author": "r1oga <38692952+r1oga@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.18.2",
     "nps": "^5.10.0",
-    "nps-utils": "^1.7.0"
+    "nps-utils": "^1.7.0",
+    "routing-controllers": "^0.9.0",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.3",
+    "@types/reflect-metadata": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
@@ -21,6 +29,7 @@
     "husky": "^8.0.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
