--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
      "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
      "paths": {
        "@controllers": ["src/api/controllers"],
+       "@middlewares": ["src/api/middlewares"],
        "@models": ["src/api/models"],
        "@repository": ["src/api/repository"]
      },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -91,7 +92,7 @@
     // "useUnknownInCatchVariables": true,               /* Default catch clause variables as 'unknown' instead of 'any'. */
      "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
      "noUnusedLocals": true,                           /* Enable error reporting when local variables aren't read. */
-     "noUnusedParameters": true,                       /* Raise an error when a function parameter isn't read. */
+    // "noUnusedParameters": true,                       /* Raise an error when a function parameter isn't read. */
     // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
     // "noImplicitReturns": true,                        /* Enable error reporting for codepaths that do not explicitly return in a function. */
     // "noFallthroughCasesInSwitch": true,               /* Enable error reporting for fallthrough cases in switch statements. */
