--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "MIT",
   "_moduleAliases": {
     "@controllers": "dist/api/controllers",
+    "@middlewares": "dist/api/middlewares",
     "@models": "dist/api/models",
     "@repository": "dist/api/repository"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "helmet": "^6.0.0",
     "module-alias": "^2.2.2",
     "nps": "^5.10.0",
     "nps-utils": "^1.7.0",
@@ -32,11 +34,14 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^8.0.1",
+    "husky": "^8.0.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
