--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "module-alias": "^2.2.2",
+    "morgan": "^1.10.0",
     "nps": "^5.10.0",
     "nps-utils": "^1.7.0",
     "routing-controllers": "^0.9.0",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.3",
     "@types/reflect-metadata": "^0.1.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "class-transformer": "^0.5.1",
