--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "MIT",
   "_moduleAliases": {
     "@controllers": "dist/api/controllers",
+    "@decorators": "dist/decorators",
     "@middlewares": "dist/api/middlewares",
     "@models": "dist/api/models",
-    "@repository": "dist/api/repository"
+    "@repository": "dist/api/repository",
+    "~": "dist/lib"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
     "module-alias": "^2.2.2",
@@ -24,24 +28,28 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.3",
     "@types/reflect-metadata": "^0.1.0",
+    "@types/supertest": "^2.0.12",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.0",
+    "jest": "^29.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
