--- a/package.json
+++ b/package.json
@@ -45,12 +45,11 @@
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.0",
     "jest": "^29.2.1",
-    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "scripts": {
