--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "~": "dist/lib"
   },
   "dependencies": {
-    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
@@ -30,26 +29,26 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^18.11.3",
-    "@types/reflect-metadata": "^0.1.0",
+    "@types/node": "^18.11.7",
     "@types/supertest": "^2.0.12",
-    "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.1.1",
-    "husky": "^8.0.0",
-    "jest": "^29.2.1",
+    "husky": "^8.0.1",
+    "jest": "^29.2.2",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
-    "supertest": "^6.3.0",
+    "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.8.4"
   },
   "scripts": {
