--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "nps": "nps"
   }
 }
