--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nps": "^5.10.0",
     "nps-utils": "^1.7.0",
     "routing-controllers": "^0.9.0",
+    "ts-node-dev": "^2.0.0",
     "typedi": "^0.10.0",
     "winston": "^3.8.2"
   },
