--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "~": "dist/lib"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "class-validator": "^0.13.2",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
@@ -45,6 +46,7 @@
     "jest": "^29.2.2",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "prisma": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
