--- a/package-scripts.yaml
+++ b/package-scripts.yaml
@@ -25,10 +25,10 @@ scripts:
   test:
     default:
       script: 'jest'
-      description: 'Run unit tests'
+      description: 'Run tests'
     watch:
       script: 'jest --watch'
-      description: 'Run unit tests (watch)'
+      description: 'Run tests (watch)'
 
   build:
     default:
@@ -36,10 +36,10 @@ scripts:
       description: 'Build project'
   start:
     dev:
-      script: 'tsnd --rs --exit-child --clear --quiet --files -r tsconfig-paths/register ./src'
+      script: 'NODE_ENV=development tsnd --rs --exit-child --clear --quiet --files -r tsconfig-paths/register ./src'
       hiddenFromHelp: true
     watch:
-      script: 'tsnd --respawn --rs --exit-child --clear --quiet --files -r tsconfig-paths/register ./src'
+      script: 'NODE_ENV=development tsnd --respawn --rs --exit-child --clear --quiet --files -r tsconfig-paths/register ./src'
       description: 'Start project (dev, watch)'
     prod:
       script: 'node -r module-alias/register ./dist --env=production'
