--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@decorators": "dist/decorators",
     "@middlewares": "dist/api/middlewares",
     "@models": "dist/api/models",
-    "@repository": "dist/api/repository",
+    "@repositories": "dist/api/repositories",
+    "@services": "dist/api/services",
     "~": "dist/lib"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "class-validator": "^0.13.2",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
@@ -43,8 +45,10 @@
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.1",
     "jest": "^29.2.2",
+    "jest-mock-extended": "^3.0.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "prisma": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
