--- a/package-scripts.yaml
+++ b/package-scripts.yaml
@@ -42,7 +42,7 @@ scripts:
       script: 'NODE_ENV=development tsnd --respawn --rs --exit-child --clear --quiet --files -r tsconfig-paths/register ./src'
       description: 'Start project (dev, watch)'
     prod:
-      script: 'node -r module-alias/register ./dist --env=production'
+      script: 'NODE_ENV=production node -r module-alias/register ./dist'
       hiddenFromHelp: true
     default:
       script: 'nps build start.prod'
