:rotating_light: :wrench: Use eslint-config-standard-with-typescript

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,11 +1,15 @@
 # no use of eslint-plugin-prettier: it is against prettier philosophy https://prettier.io/docs/en/integrating-with-linters.html#notes
 
-extends: ['eslint:recommended', 'plugin:@typescript-eslint/recommended', 'standard', 'prettier']
+extends: ['eslint:recommended', 'plugin:@typescript-eslint/recommended', 'standard-with-typescript', 'prettier']
 parser: '@typescript-eslint/parser'
+parserOptions:
+  project: './tsconfig.eslint.json'
 plugins: ['@typescript-eslint', 'jest']
 root: true
 rules:
   '@typescript-eslint/ban-ts-comment': warn
+  '@typescript-eslint/explicit-function-return-type': off
+  '@typescript-eslint/return-await': off
   no-console: warn
   no-useless-constructor: warn
 env:
