👷 :rotating:light: Use specific linting config for CI

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -41,7 +41,7 @@ jobs:
         run: pnpm i --ignore-scripts
 
       - name: Lint
-        run: npm run nps lint.check
+        run: npm run nps lint.ci
 
       - name: Format
         run: npm run nps format.check
