Revert "👷 :rotating:light: Use specific linting config for CI"
This reverts commit 06115c8c0c77ae4ff844b4140122502833b400fc.

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -43,7 +43,7 @@ jobs:
           pnpm exec prisma generate
 
       - name: Lint
-        run: npm run nps lint.ci
+        run: npm run nps lint.check
 
       - name: Format
         run: npm run nps format.check
