👷 Use clean install without husky in GH action (#10)
* 👷 Use clean install without husky in GH action

* 👷 :rotating:light: Use specific linting config for CI

* Generate prisma assets

* Revert "👷 :rotating:light: Use specific linting config for CI"

This reverts commit 06115c8c0c77ae4ff844b4140122502833b400fc.

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -38,7 +38,9 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: pnpm install
+        run: |
+          pnpm i --ignore-scripts
+          pnpm exec prisma generate
 
       - name: Lint
         run: npm run nps lint.check
