--- a/package-scripts.yaml
+++ b/package-scripts.yaml
@@ -2,15 +2,21 @@ scripts:
   clean:
     script: 'rm -rf dist'
     hiddenFromHelp: true
+
   transpile:
     script: 'tsc'
     hiddenFromHelp: true
+
   lint:
     check:
       script: 'eslint . --ext .ts'
       hiddenFromHelp: true
     fix:
       script: 'eslint . --ext .ts --fix'
+    ci:
+      script: 'eslint . --ext .ts --quiet'
+      hiddenFromHelp: true
+
   format:
     check:
       script: 'prettier "src" --check'
@@ -18,6 +24,10 @@ scripts:
     fix:
       script: 'prettier "src" --write'
       description: 'Format files'
+    ci:
+      script: 'prettier "src" --check --loglevel warn'
+      hiddenFromHelp: true
+
   prepare:
     script: "husky install"
     hiddenFromHelp: true
@@ -29,11 +39,15 @@ scripts:
     watch:
       script: 'jest --watch'
       description: 'Run tests (watch)'
+    ci:
+      script: 'jest --silent  --reporters=jest-silent-reporter'
+      hiddenFromHelp: true
 
   build:
     default:
       script: 'nps clean transpile'
       description: 'Build project'
+
   start:
     dev:
       script: 'NODE_ENV=development tsnd --rs --exit-child --clear --quiet --files -r tsconfig-paths/register ./src'
@@ -47,3 +61,7 @@ scripts:
     default:
       script: 'nps lint.check format.check build start.prod'
       description: 'Start project (prod)'
+
+  ci:
+    script: 'nps lint.ci format.ci transpile test.ci'
+    hiddenFromHelp: true
