--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^8.0.1",
     "jest": "^29.2.2",
     "jest-mock-extended": "^3.0.1",
+    "jest-silent-reporter": "^0.5.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "prisma": "^4.5.0",
